<resources>
    <string name="app_name">Medical Consulting</string>
    <string name="action_settings">Profile</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Appointments</string>
    <string name="nav_item_friends">Availabilities</string>
    <string name="nav_item_request">Requests</string>
    <string name="nav_item_tutor">Rate Tutors</string>

    <!-- strings _nuova_disponibilita -->

    <string name="specialtiesLabel_textView">Expertise</string>
    <string name="congiunzione_to">To</string>
    <string name="summary_rep">Repetition</string>
    <string name="summary_untilDate">Until</string>
    <string name="summaryConfirmButton">Confirm</string>
    <string name="summaryEditButton">Back</string>
    <string name="summaryTitle">SUMMARY</string>

    <!-- strings _rating tutor  -->
    <string name="dialogTutorRatingBtn">Send</string>

    <!-- strings richieste -->

    <string name="tab_sent">Sent</string>
    <string name="tab_received">Received</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/title_newDisp</item>
        <item>@string/nav_item_request</item>
        <item>@string/title_newReq</item>
        <item>@string/title_valTutor</item>
    </string-array>

    <string name="title_request">Requests</string>
    <string name="title_friends">Availabilities</string>
    <string name="title_home">Appointments</string>
    <string name="title_newDisp">New Availability</string>
    <string name="title_editDisp">Edit Availability</string>
    <string name="title_editProfile">Edit Profile</string>
    <string name="title_newReq">New Request</string>
    <string name="title_valTutor">Rate Tutors</string>

    <string name="serverQuery">http://www.di.uniba.it/~buono/SSS/casidistudio/consulenze/script_php/accessoFile.php</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_registrazione">Register</string>

    <!-- Strings related to registration -->
    <string name="name_label">Name :</string>
    <string name="surname_label">Surname:</string>
    <string name="specialties_label">Specialization:</string>
    <string name="province_label">Province :</string>
    <string name="number_label">Registration Number :</string>
    <string name="albo_label">Enrolled in the Register on:</string>
    <string name="email_label">Email :</string>
    <string name="year_label">Registration Year :</string>
    <string name="password_label">Password:</string>
    <string name="reg_btn">Register New Account</string>
    <string name="login_link">Already have account? Login here</string>

    <!-- Strings related to richieste -->
    <string name="title_activity_richieste">Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="summary_expertise">Confirm availability for </string>
    <string name="summary_date">on Date</string>

    <!-- Strings related to Password change -->
    <string name="pwd_change_dialog_title">CHANGE PASSWORD</string>
    <string name="old_pwd_lbl">Old password :</string>
    <string name="new_pwd_lbl">Insert new password :</string>
    <string name="conf_pwd_lbl">Confirm new password :</string>
    <string name="confirm_btn">Confirm</string>
    <string name="back_btn">Back</string>

    <!-- Chiavi shared preferences -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="txtProv">Province</string>
    <string name="anno">Registration year</string>
    <string name="numero">Registration Number</string>
    <string name="cognome">Surname</string>
    <string name="nome">Name</string>
    <string name="spec_prim">Expertise</string>
    <string name="score">Score</string>
    <string name="mod_pwd">Change Password</string>
    <string name="mod_prof">Save</string>
    <string name="title_button_Search">SEARCH</string>
    <string name="bottone_accetta">Accept</string>
    <string name="bottone_rifiuta">Decline</string>
    <string name="mail">Mail</string>
    <string name="new_request_spec">Expertise</string>
    <string name="new_request_operation">Operation</string>
    <string name="new_request_date">Date</string>
    <string name="new_request_start">Start Time</string>
    <string name="new_request_default_time">--:--</string>
    <string name="new_request_end">End Time</string>
    <string name="new_request_tutor_choice">Tutor</string>
    <string name="new_request_send_button">SEND</string>
    <string name="summary_cancel_button">Back</string>
    <string name="intervScelta">Operation selected</string>
    <string name="summary_operation">Comfirm operation for</string>
    <string name="start_date">Request for :</string>
    <string name="from">From</string>
    <string name="request_received_operation">Operation :</string>
    <string name="request_received_dottore">Doctor :</string>
    <string name="action_logout">Logout</string>
    <string name="new_request_summary_button">Summary</string>
    <string name="bottone_modifica_miaDisp">Edit</string>
    <string name="bottone_cancella_miaDisp">Delete</string>
    <string name="everyWeek">Every week.</string>
    <string name="everyTwoWeek">Every two weeks.</string>
    <string name="everyDay1">(Every Monday)</string>
    <string name="everyDay2">(Every Tuesday)</string>
    <string name="everyDay3">(Every Wednesday)</string>
    <string name="everyDay4">(Every Thursday)</string>
    <string name="everyDay5">(Every Friday)</string>
    <string name="everyDay6">(Every Saturday)</string>
    <string name="everyDay7">(Every Sunday)</string>
    <string name="choseOperation">Chose operation first</string>
    <string name="noOperation">No operations Avaible</string>
    <string name="requestAccepted">Request accepted</string>
    <string name="requestRefused">Request declined</string>
    <string name="availabilityEdited">AvailabilityEdited</string>
    <string name="newAvailabilityInserted">New Availability Inserted</string>
    <string name="newRequestSent">New request Sent</string>
    <string name="voteSent">Vote sent</string>
    <string name="availabilityDeleted">Availability deleted</string>
    <string name="scoretutor">Score :</string>
    <string name="bottone_modifica_richiesta_inviata">Edit</string>
    <string name="bottone_cancella_richiesta_inviata">Delete</string>
    <string name="availabilityFor">Availability for :</string>
    <string name="repetition">Repetition :</string>
    <string name="endRepetition">Repetition ends :</string>
    <string name="allFieldsNeeded">All fields required</string>
    <string name="requestDeleted">Request Deleted</string>
    <string name="data_label_appoint">Date :</string>
    <string name="choseExpertise">Choose expertise first</string>
    <string name="appoint_type">Type :</string>
    <string name="appoint_type_label">Type :</string>
    <string name="appoint_operation">Operation :</string>
    <string name="appoint_doctor">With :</string>
    <string name="profileEdited">Profile edited</string>
    <string name="chooseOne">You have to choose a smile</string>
    <string name="nodate">Start date is required</string>
    <string name="nostart">Start time is required</string>
    <string name="noend">End time is required</string>
    <string name="insertName">Insert name please</string>
    <string name="InvalidValue">Invalid value</string>
    <string name="insertSurname">Insert surname please</string>
    <string name="insertYear">Insert registration year please</string>
    <string name="insertNumber">Insert registration number please</string>
    <string name="date">Date</string>
    <string name="startTime">Start time :</string>
    <string name="endTime">End time :</string>
    <string name="until">Until :</string>
    <string name="insertEmail">Insert email please</string>
    <string name="sameOldPass">New and old password are the same</string>
    <string name="nothesame">Both fields have to be the same</string>
    <string name="passChanged">Password changed</string>
    <string name="notsetyet">Not set yet</string>
    <string name="profileImageEdited">Profile Image Edited</string>
    <string name="siglaDott">Dr.</string>
    <string name="rate_button">Rate</string>
    <string name="doctor_account_button">Account</string>
    <string name="doctor">Doctor :</string>
    <string name="to">to</string>
    <string name="send_request">Send request</string>
    <string name="notSet">[Not set]</string>
    <string name="nodatefn">End date is required</string>
    <string name="recurrenceOff">Repeat OFF</string>
    <string name="recurrenceOn">Repeat ON</string>
    <string name="rateTutor">RATE TUTOR</string>

</resources>
