<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="5dp"


    tools:context="it.uniba.di.sss1415.app_consulenze.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background = "@drawable/client_login_banner"/>

    <View
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="6dip"
        android:elevation="10dp"
        app:borderWidth="0dp"
        android:background="@drawable/drop_shadow"
        android:layout_below="@+id/imageView"
        />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@color/primary_material_dark"
                android:layout_marginTop="40dp"
                />
            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/primary_material_dark"
                android:layout_marginTop="20dp"
                />
            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:layout_marginBottom="40dp"/>



        </LinearLayout>
    </ScrollView>
    <Button android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/action_sign_in_short"
        android:textStyle="bold"
        android:textSize="@dimen/login_link_text_size"
        android:textColor="@color/whiteText"
        android:backgroundTint="@color/colorAccent"
        android:layout_above="@+id/link_to_signup"/>

    <Button android:id="@+id/link_to_signup"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/reg_btn"
        android:textStyle="bold"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/login_link_text_size"
        android:backgroundTint="@color/colorAccent"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>

