<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.uniba.di.sss1415.app_consulenze.fragment.PasswordChangeDialog"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pwd_change_dialog_title"
        android:id="@+id/textView"
        android:textColor="@color/whiteText"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical|center_horizontal" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/et_marginBottom">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/old_pwd_lbl" />

        <TextView
            android:id="@+id/old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"/>
        </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_pwd_lbl"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/conf_pwd_lbl" />

    <EditText
        android:id="@+id/conf_pwd"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
