<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="it.uniba.di.sss1415.app_consulenze.LoginActivity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:id="@+id/imageView"
    android:layout_gravity="center_horizontal"
    android:background = "@drawable/client_register_banner"/>
    <View
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="6dip"
        android:elevation="10dp"
        app:borderWidth="0dp"
        android:background="@drawable/drop_shadow"
        android:layout_below="@+id/imageView"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/imageView"
        android:orientation="vertical">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:fillViewport="true"
    tools:context="it.uniba.di.sss1415.app_consulenze.RegistrazioneActivity"
    >


    <!-- Registration Form -->
    <LinearLayout

        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ll_padding"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <!--  Email Label -->
        <TextView android:id="@+id/reg_email_label_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>
        <EditText android:id="@+id/reg_email_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/et_marginBottom"
            android:layout_marginTop="@dimen/et_marginTop"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>
        <!-- Numero --> <!-- DA CONTROLLARE -->
        <TextView android:id="@+id/reg_anno_label_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_label" />
        <EditText android:id="@+id/reg_anno_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/et_marginBottom"
            android:layout_marginTop="@dimen/et_marginTop"
            android:inputType="number"
            android:singleLine="true"/>
        <!-- Numero --> <!-- DA CONTROLLARE -->
        <TextView android:id="@+id/reg_num_label_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_label" />
        <EditText android:id="@+id/reg_num_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/et_marginBottom"
            android:layout_marginTop="@dimen/et_marginTop"
            android:inputType="number"
            android:singleLine="true"/>
        <!-- Province Label -->
        <TextView android:id="@+id/reg_province_label_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/province_label" />
        <Spinner android:id="@+id/province_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>




    </LinearLayout>


</ScrollView>
    <!-- Register Button -->
    <Button android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn"
        android:background="@color/colorAccent"
        android:textSize="@dimen/login_link_text_size"
        android:textColor="@color/whiteText"
        android:layout_margin="5dp"
        />
    <!-- Link to Login Screen -->

    <Button android:id="@+id/link_to_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/login_link"
        android:textSize="15dp"
        android:textColor="@color/whiteText"
        />
    <!-- Registration Form Ends -->
    </LinearLayout>
</RelativeLayout>